gcc/testsuite/rust/compile/bad-crate-name2.rs
#![crate_name = "ğŸ˜…"] // { dg-error "invalid character ...." "" }
fn main() {}
